--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,12 @@ dependencies = [
     "django==5.2.4",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
     "django-stubs[compatible-mypy]==5.2.1",
     "mypy==1.16.1",
 ]
+
+[tool.uv]
+default-groups = ["dev"]
+
