--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "django-site"
 version = "0.1.0"
 description = "Django web application"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "==3.13.5"
 dependencies = [
     "django==5.2.4",
 ]
@@ -13,7 +13,3 @@ dev = [
     "django-stubs[compatible-mypy]==5.2.1",
     "mypy==1.16.1",
 ]
-
-[tool.uv]
-default-groups = ["dev"]
-
