--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  mypy:
+  static-analysis:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,5 +20,7 @@ jobs:
         run: pip install uv
       - name: Install dependencies
         run: uv pip install --system --group dev
+      - name: Run ruff format
+        run: pre-commit run --all-files ruff-format
       - name: Run mypy
         run: mypy .
