--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,17 @@ dependencies = [
 dev = [
     "django-stubs[compatible-mypy]==5.2.1",
     "mypy==1.16.1",
+    "pre-commit==4.2.0",
+    "ruff==0.12.3",
+]
+
+[tool.mypy]
+plugins = "mypy_django_plugin.main"
+
+[tool.django-stubs]
+django_settings_module = "mysite.settings"
+
+[tool.ruff]
+extend-exclude = [
+    "apps/*/migrations/*",
 ]
