--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,9 @@ jobs:
         run: uv lock --check
       - name: Install dependencies
         run: uv pip install --system --group dev
+      - name: Run ruff check
+        run: ruff check .
       - name: Run ruff format
-        run: pre-commit run --all-files ruff-format
+        run: ruff format --check .
       - name: Run mypy
         run: mypy .
