--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev = [
 ]
 
 [tool.mypy]
+strict = true
 plugins = "mypy_django_plugin.main"
 
 [tool.django-stubs]
@@ -26,3 +27,5 @@ django_settings_module = "mysite.settings"
 extend-exclude = [
     "apps/*/migrations/*",
 ]
+force-exclude = true
+
