run tests in ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,19 +12,27 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - name: Install uv
-        run: pip install uv
-      - name: Lock check
-        run: uv lock --check
+      - name: Set up environment
+        uses: ./.github/actions/setup
       - name: Install dependencies
         run: uv pip install --system --group dev
+
       - name: Run ruff check
         run: ruff check .
       - name: Run ruff format
         run: ruff format --check .
       - name: Run mypy
         run: mypy .
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up environment
+        uses: ./.github/actions/setup
+      - name: Install dependencies
+        run: uv sync --locked --all-extras
+        
+      - name: Run Django tests
+        run: uv run python manage.py test
