--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,7 +6,7 @@ runs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version-file: 'pyproject.toml'
+        python-version-file: "pyproject.toml"
     - name: Install uv
       run: pip install uv
       shell: bash
