--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -3,6 +3,7 @@ name: Set up environment
 runs:
   using: "composite"
   steps:
+    # python deps
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -10,6 +11,17 @@ runs:
     - name: Install uv
       run: pip install uv
       shell: bash
-    - name: Lock check
-      run: uv lock --check
+    - name: Install Python dependencies
+      run: uv sync --locked --all-extras
+      shell: bash
+    # node deps
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: "package.json"
+    - name: Install yarn
+      run: npm install -g yarn
+      shell: bash
+    - name: Install Node.js dependencies
+      run: yarn install --frozen-lockfile
       shell: bash
