--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,19 +14,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
-      - name: Install dependencies
-        run: uv pip install --system --group dev
 
-      - name: Run ruff check
-        run: ruff check .
+      # formatters
       - name: Run ruff format
-        run: ruff format --check .
-
+        run: uv run ruff format --check .
       - name: Run toml-sort
-        run: shopt -s globstar && toml-sort --check **/*.toml
+        run: uv run toml-sort --check $(git ls-files '*.toml')
+      - name: Run prettier
+        run: yarn run prettier --check $(git ls-files '*.yml' '*.yaml')
 
+      # linters
+      - name: Run ruff check
+        run: uv run ruff check .
       - name: Run mypy
-        run: mypy .
+        run: uv run mypy .
 
   tests:
     runs-on: ubuntu-latest
@@ -35,8 +36,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
-      - name: Install dependencies
-        run: uv sync --locked --all-extras
 
       - name: Run Django tests
         run: uv run python manage.py test
