--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,8 @@
 # .envrc for django-site
 
-watch_file pyproject.toml package.json
+watch_file uv.lock yarn.lock
 
-make dev-setup
+make .install-deps
 source .venv/bin/activate
 
 # Set Django settings module
