--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up environment
-        uses: ./.github/actions/setup
+        uses: .github/actions/setup
 
       # formatters
       - name: Run ruff format
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up environment
-        uses: ./.github/actions/setup
+        uses: .github/actions/setup
 
       - name: Run mypy
         run: uv run mypy .
@@ -44,7 +44,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up environment
-        uses: ./.github/actions/setup
+        uses: .github/actions/setup
 
       - name: Run Django tests
         run: uv run python manage.py test
