--- a/.github/workflows/warm-mypy-cache.yml
+++ b/.github/workflows/warm-mypy-cache.yml
@@ -2,7 +2,7 @@ name: Warm mypy cache
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -26,8 +26,9 @@ jobs:
           echo "hour=$(date -u +'%H')" >> $GITHUB_OUTPUT
         env:
           TZ: UTC
+
       - name: Store cache
-        uses: actions/cache@v4
+        uses: actions/cache/save@v4
         with:
           path: .mypy_cache
           key: mypy-cache-${{ steps.date.outputs.year }}-${{ steps.date.outputs.month }}-${{ steps.date.outputs.day }}-${{ steps.date.outputs.hour }}
