--- a/.github/workflows/warm-mypy-cache.yml
+++ b/.github/workflows/warm-mypy-cache.yml
@@ -6,8 +6,23 @@ on:
   workflow_dispatch:
 
 jobs:
+  check-mypy-cache:
+    runs-on: ubuntu-latest
+    outputs:
+      cache-hit: ${{ steps.check-cache.outputs.cache-hit }}
+    steps:
+      - name: Check cache
+        id: check-cache
+        uses: actions/cache/restore@v4
+        with:
+          path: .mypy_cache
+          key: mypy-cache-${{ github.ref_name }}-${{ github.sha }}
+          lookup-only: true
+
   warm-mypy-cache:
     runs-on: ubuntu-latest
+    needs: [check-mypy-cache]
+    if: ${{ needs.check-mypy-cache.outputs.cache-hit != 'true' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -15,13 +30,10 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run mypy
-        run: uv run mypy .
+        run: uv run mypy --cache-fine-grained .
 
-      - name: Generate build time key fragments
-        uses: ./.github/actions/build-time-key-fragment
-        id: keygen
       - name: Store cache
         uses: actions/cache/save@v4
         with:
           path: .mypy_cache
-          key: mypy-cache-${{ steps.keygen.outputs.primary_key }}
+          key: mypy-cache-${{ github.ref_name }}-${{ github.sha }}
