--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
       # linters
       - name: Run ruff check
         run: uv run ruff check .
+      - name: Block @nomerge comments
+        run: '! git grep -n "@nomerge" -- ":!.github/workflows/test.yml"'
 
   type-checks:
     runs-on: ubuntu-latest
