--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,8 +49,18 @@ jobs:
 
       - name: Run dmypy
         run: uv run dmypy run -- --use-fine-grained-cache .
+        continue-on-error: true
       - name: Run mypy
-        run: uv run mypy --cache-dir=/dev/null .
+        run: |
+          uv run mypy --cache-dir=/dev/null . | while read -r line; do
+            if [[ "$line" =~ ^([^:]+):([0-9]+): ]]; then
+              file="${BASH_REMATCH[1]}"
+              lineno="${BASH_REMATCH[2]}"
+              echo "::warn file=$file,line=$lineno::$line"
+            else
+              echo "$line"
+            fi
+          done
 
   tests:
     runs-on: ubuntu-latest
