--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
             if [[ "$line" =~ ^([^:]+):([0-9]+): ]]; then
               file="${BASH_REMATCH[1]}"
               lineno="${BASH_REMATCH[2]}"
-              echo "::warn file=$file,line=$lineno::$line"
+              echo "::error file=$file,line=$lineno::$line"
             else
               echo "$line"
             fi
