--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,20 +53,16 @@ jobs:
       - name: Run mypy
         run: |
           set -o pipefail
-          uv run mypy --cache-dir=/dev/null --show-error-end . | while read -r line; do
-            if [[ "$line" =~ ^([^:]+):([0-9]+):([0-9]+):([0-9]+):([0-9]+):\ ([a-z]+):\ (.*)$ ]]; then
+          uv run mypy --cache-dir=/dev/null . | while read -r line; do
+            if [[ "$line" =~ ^([^:]+):([0-9]+):\ ([a-z]+):\ (.*)$ ]]; then
               file="${BASH_REMATCH[1]}"
               lineno="${BASH_REMATCH[2]}"
-              column="${BASH_REMATCH[3]}"
-              end_line="${BASH_REMATCH[4]}"
-              end_column="${BASH_REMATCH[5]}"
-              severity="${BASH_REMATCH[6]}"
-              message="${BASH_REMATCH[7]}"
+              severity="${BASH_REMATCH[3]}"
+              message="${BASH_REMATCH[4]}"
 
               loglevel="notice"
               [[ "$severity" == "error" ]] && loglevel="error"
-              echo "file=$file,line=$lineno,col=$column,endLine=$end_line,endColumn=$end_column::$message"
-              echo "::${loglevel} file=$file,line=$lineno,col=$column,endLine=$end_line,endColumn=$end_column::$message"
+              echo "::${loglevel} file=$file,line=$lineno::$message"
             fi
             echo "$line"
           done
