--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,12 +48,9 @@ jobs:
             mypy-cache-${{ github.event.pull_request.base.ref || github.ref_name }}-
 
       - name: Run dmypy
-        run: uv run dmypy run -- --use-fine-grained-cache .
-        continue-on-error: true
-      - name: Run mypy
         run: |
           set -o pipefail
-          uv run mypy --cache-dir=/dev/null . | while read -r line; do
+          uv run dmypy run -- --use-fine-grained-cache . | while read -r line; do
             if [[ "$line" =~ ^([^:]+):([0-9]+):\ ([a-z]+):\ (.*)$ ]]; then
               file="${BASH_REMATCH[1]}"
               lineno="${BASH_REMATCH[2]}"
@@ -66,6 +63,10 @@ jobs:
             fi
             echo "$line"
           done
+        continue-on-error: true
+      - name: Run mypy
+        run: |
+          uv run mypy --cache-dir=/dev/null .
 
   tests:
     runs-on: ubuntu-latest
