--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
           path: .mypy_cache
           key: mypy-cache-${{ github.ref_name }}-${{ github.sha }}
           restore-keys: |
-            mypy-cache-${{ github.event.pull_request.base.ref || github.ref_name }}-
+            mypy-cache-${{ github.event.pull_request.base.ref || github.event.repository.default_branch }}-
 
       - name: Run dmypy
         run: |
