--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,14 +52,9 @@ jobs:
           set -o pipefail
           uv run dmypy run -- --use-fine-grained-cache . | while read -r line; do
             if [[ "$line" =~ ^([^:]+):([0-9]+):\ ([a-z]+):\ (.*)$ ]]; then
-              file="${BASH_REMATCH[1]}"
-              lineno="${BASH_REMATCH[2]}"
-              severity="${BASH_REMATCH[3]}"
-              message="${BASH_REMATCH[4]}"
-
               loglevel="notice"
-              [[ "$severity" == "error" ]] && loglevel="error"
-              echo "::${loglevel} file=$file,line=$lineno::$message"
+              [[ "$BASH_REMATCH[3]" == "error" ]] && loglevel="error"
+              echo "::${loglevel} file=$BASH_REMATCH[1],line=$BASH_REMATCH[2]::$BASH_REMATCH[4]"
             fi
             echo "$line"
           done
