--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,14 +50,7 @@ jobs:
       - name: Run dmypy
         run: |
           set -o pipefail
-          uv run dmypy run -- --use-fine-grained-cache . | while read -r line; do
-            if [[ "$line" =~ ^([^:]+):([0-9]+):\ ([a-z]+):\ (.*)$ ]]; then
-              loglevel="notice"
-              [[ "$BASH_REMATCH[3]" == "error" ]] && loglevel="error"
-              echo "::${loglevel} file=$BASH_REMATCH[1],line=$BASH_REMATCH[2]::$BASH_REMATCH[4]"
-            fi
-            echo "$line"
-          done
+          uv run dmypy run -- --use-fine-grained-cache . | ./.github/scripts/mypy/log.sh
         continue-on-error: true
       - name: Run mypy
         run: |
