--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "django-site",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "repository": "git@github.com:rodmk/django-site.git",
   "author": "Rodrigo Muñoz <rod@rodmk.com>",
